Archive2/49/edd463ef4f552a/output
main.cpp:5:27: error: expected ';' at end of declaration list
    virtual void foo() = 0 { std::cout << "X::foo"; }
                          ^
                          ;
1 error generated.
